cmake_minimum_required(VERSION 3.5)

project(tele_rest)

set(CMAKE_AUTOMOC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Gui)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network Gui)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

add_library(${PROJECT_NAME}
  OAIAcceptedGiftTypes.h
  OAIAffiliateInfo.h
  OAIAnimation.h
  OAIAudio.h
  OAIBackgroundFill.h
  OAIBackgroundFillFreeformGradient.h
  OAIBackgroundFillGradient.h
  OAIBackgroundFillSolid.h
  OAIBackgroundType.h
  OAIBackgroundTypeChatTheme.h
  OAIBackgroundTypeFill.h
  OAIBackgroundTypePattern.h
  OAIBackgroundTypeWallpaper.h
  OAIBirthdate.h
  OAIBotCommand.h
  OAIBotCommandScope.h
  OAIBotCommandScopeAllChatAdministrators.h
  OAIBotCommandScopeAllGroupChats.h
  OAIBotCommandScopeAllPrivateChats.h
  OAIBotCommandScopeChat.h
  OAIBotCommandScopeChatAdministrators.h
  OAIBotCommandScopeChatMember.h
  OAIBotCommandScopeDefault.h
  OAIBotDescription.h
  OAIBotName.h
  OAIBotShortDescription.h
  OAIBusinessBotRights.h
  OAIBusinessConnection.h
  OAIBusinessIntro.h
  OAIBusinessLocation.h
  OAIBusinessMessagesDeleted.h
  OAIBusinessOpeningHours.h
  OAIBusinessOpeningHoursInterval.h
  OAICallbackQuery.h
  OAIChat.h
  OAIChatAdministratorRights.h
  OAIChatBackground.h
  OAIChatBoost.h
  OAIChatBoostAdded.h
  OAIChatBoostRemoved.h
  OAIChatBoostSource.h
  OAIChatBoostSourceGiftCode.h
  OAIChatBoostSourceGiveaway.h
  OAIChatBoostSourcePremium.h
  OAIChatBoostUpdated.h
  OAIChatFullInfo.h
  OAIChatInviteLink.h
  OAIChatJoinRequest.h
  OAIChatLocation.h
  OAIChatMember.h
  OAIChatMemberAdministrator.h
  OAIChatMemberBanned.h
  OAIChatMemberLeft.h
  OAIChatMemberMember.h
  OAIChatMemberOwner.h
  OAIChatMemberRestricted.h
  OAIChatMemberUpdated.h
  OAIChatPermissions.h
  OAIChatPhoto.h
  OAIChatShared.h
  OAIChosenInlineResult.h
  OAIContact.h
  OAICopyTextButton.h
  OAIDice.h
  OAIDocument.h
  OAIEncryptedCredentials.h
  OAIEncryptedPassportElement.h
  OAIError.h
  OAIExternalReplyInfo.h
  OAIFile.h
  OAIForceReply.h
  OAIForumTopic.h
  OAIForumTopicCreated.h
  OAIForumTopicEdited.h
  OAIGame.h
  OAIGameHighScore.h
  OAIGift.h
  OAIGiftInfo.h
  OAIGifts.h
  OAIGiveaway.h
  OAIGiveawayCompleted.h
  OAIGiveawayCreated.h
  OAIGiveawayWinners.h
  OAIInaccessibleMessage.h
  OAIInlineKeyboardButton.h
  OAIInlineKeyboardMarkup.h
  OAIInlineQuery.h
  OAIInlineQueryResult.h
  OAIInlineQueryResultArticle.h
  OAIInlineQueryResultAudio.h
  OAIInlineQueryResultCachedAudio.h
  OAIInlineQueryResultCachedDocument.h
  OAIInlineQueryResultCachedGif.h
  OAIInlineQueryResultCachedMpeg4Gif.h
  OAIInlineQueryResultCachedPhoto.h
  OAIInlineQueryResultCachedSticker.h
  OAIInlineQueryResultCachedVideo.h
  OAIInlineQueryResultCachedVoice.h
  OAIInlineQueryResultContact.h
  OAIInlineQueryResultDocument.h
  OAIInlineQueryResultGame.h
  OAIInlineQueryResultGif.h
  OAIInlineQueryResultLocation.h
  OAIInlineQueryResultMpeg4Gif.h
  OAIInlineQueryResultPhoto.h
  OAIInlineQueryResultVenue.h
  OAIInlineQueryResultVideo.h
  OAIInlineQueryResultVoice.h
  OAIInlineQueryResultsButton.h
  OAIInputContactMessageContent.h
  OAIInputInvoiceMessageContent.h
  OAIInputLocationMessageContent.h
  OAIInputMedia.h
  OAIInputMediaAnimation.h
  OAIInputMediaAudio.h
  OAIInputMediaDocument.h
  OAIInputMediaPhoto.h
  OAIInputMediaVideo.h
  OAIInputMessageContent.h
  OAIInputPaidMedia.h
  OAIInputPaidMediaPhoto.h
  OAIInputPaidMediaVideo.h
  OAIInputPollOption.h
  OAIInputProfilePhoto.h
  OAIInputProfilePhotoAnimated.h
  OAIInputProfilePhotoStatic.h
  OAIInputSticker.h
  OAIInputStoryContent.h
  OAIInputStoryContentPhoto.h
  OAIInputStoryContentVideo.h
  OAIInputTextMessageContent.h
  OAIInputVenueMessageContent.h
  OAIInvoice.h
  OAIKeyboardButton.h
  OAIKeyboardButtonPollType.h
  OAIKeyboardButtonRequestChat.h
  OAIKeyboardButtonRequestUsers.h
  OAILabeledPrice.h
  OAILinkPreviewOptions.h
  OAILocation.h
  OAILocationAddress.h
  OAILoginUrl.h
  OAIMaskPosition.h
  OAIMaybeInaccessibleMessage.h
  OAIMenuButton.h
  OAIMenuButtonCommands.h
  OAIMenuButtonDefault.h
  OAIMenuButtonWebApp.h
  OAIMessage.h
  OAIMessageAutoDeleteTimerChanged.h
  OAIMessageEntity.h
  OAIMessageId.h
  OAIMessageOrigin.h
  OAIMessageOriginChannel.h
  OAIMessageOriginChat.h
  OAIMessageOriginHiddenUser.h
  OAIMessageOriginUser.h
  OAIMessageReactionCountUpdated.h
  OAIMessageReactionUpdated.h
  OAIOrderInfo.h
  OAIOwnedGift.h
  OAIOwnedGiftRegular.h
  OAIOwnedGiftUnique.h
  OAIOwnedGifts.h
  OAIPaidMedia.h
  OAIPaidMediaInfo.h
  OAIPaidMediaPhoto.h
  OAIPaidMediaPreview.h
  OAIPaidMediaPurchased.h
  OAIPaidMediaVideo.h
  OAIPaidMessagePriceChanged.h
  OAIPassportData.h
  OAIPassportElementError.h
  OAIPassportElementErrorDataField.h
  OAIPassportElementErrorFile.h
  OAIPassportElementErrorFiles.h
  OAIPassportElementErrorFrontSide.h
  OAIPassportElementErrorReverseSide.h
  OAIPassportElementErrorSelfie.h
  OAIPassportElementErrorTranslationFile.h
  OAIPassportElementErrorTranslationFiles.h
  OAIPassportElementErrorUnspecified.h
  OAIPassportFile.h
  OAIPhotoSize.h
  OAIPoll.h
  OAIPollAnswer.h
  OAIPollOption.h
  OAIPost_answerCallbackQuery_request.h
  OAIPost_answerInlineQuery_request.h
  OAIPost_answerPreCheckoutQuery_request.h
  OAIPost_answerShippingQuery_request.h
  OAIPost_answerWebAppQuery_200_response.h
  OAIPost_answerWebAppQuery_request.h
  OAIPost_approveChatJoinRequest_request.h
  OAIPost_banChatMember_request.h
  OAIPost_banChatMember_request_chat_id.h
  OAIPost_banChatSenderChat_request.h
  OAIPost_closeForumTopic_request.h
  OAIPost_convertGiftToStars_request.h
  OAIPost_copyMessage_200_response.h
  OAIPost_copyMessage_request.h
  OAIPost_copyMessages_request.h
  OAIPost_createChatInviteLink_200_response.h
  OAIPost_createChatInviteLink_request.h
  OAIPost_createChatSubscriptionInviteLink_request.h
  OAIPost_createChatSubscriptionInviteLink_request_chat_id.h
  OAIPost_createForumTopic_200_response.h
  OAIPost_createForumTopic_request.h
  OAIPost_createInvoiceLink_request.h
  OAIPost_deleteBusinessMessages_request.h
  OAIPost_deleteChatStickerSet_request.h
  OAIPost_deleteMessage_request.h
  OAIPost_deleteMessages_request.h
  OAIPost_deleteMyCommands_request.h
  OAIPost_deleteStickerFromSet_request.h
  OAIPost_deleteStickerSet_request.h
  OAIPost_deleteStory_request.h
  OAIPost_deleteWebhook_request.h
  OAIPost_editChatInviteLink_request.h
  OAIPost_editChatSubscriptionInviteLink_request.h
  OAIPost_editForumTopic_request.h
  OAIPost_editGeneralForumTopic_request.h
  OAIPost_editMessageCaption_request.h
  OAIPost_editMessageLiveLocation_request.h
  OAIPost_editMessageReplyMarkup_request.h
  OAIPost_editMessageText_200_response.h
  OAIPost_editMessageText_200_response_result.h
  OAIPost_editMessageText_request.h
  OAIPost_editMessageText_request_chat_id.h
  OAIPost_editUserStarSubscription_request.h
  OAIPost_exportChatInviteLink_200_response.h
  OAIPost_exportChatInviteLink_request.h
  OAIPost_forwardMessage_request.h
  OAIPost_forwardMessage_request_from_chat_id.h
  OAIPost_forwardMessages_200_response.h
  OAIPost_forwardMessages_request.h
  OAIPost_forwardMessages_request_from_chat_id.h
  OAIPost_getAvailableGifts_200_response.h
  OAIPost_getBusinessAccountGifts_200_response.h
  OAIPost_getBusinessAccountGifts_request.h
  OAIPost_getBusinessAccountStarBalance_200_response.h
  OAIPost_getBusinessConnection_200_response.h
  OAIPost_getBusinessConnection_request.h
  OAIPost_getChatAdministrators_200_response.h
  OAIPost_getChatMemberCount_200_response.h
  OAIPost_getChatMember_200_response.h
  OAIPost_getChatMember_request.h
  OAIPost_getChatMenuButton_200_response.h
  OAIPost_getChatMenuButton_request.h
  OAIPost_getChat_200_response.h
  OAIPost_getCustomEmojiStickers_request.h
  OAIPost_getFile_200_response.h
  OAIPost_getFile_request.h
  OAIPost_getForumTopicIconStickers_200_response.h
  OAIPost_getGameHighScores_200_response.h
  OAIPost_getGameHighScores_request.h
  OAIPost_getMe_200_response.h
  OAIPost_getMyCommands_200_response.h
  OAIPost_getMyCommands_request.h
  OAIPost_getMyDefaultAdministratorRights_200_response.h
  OAIPost_getMyDefaultAdministratorRights_request.h
  OAIPost_getMyDescription_200_response.h
  OAIPost_getMyName_200_response.h
  OAIPost_getMyName_request.h
  OAIPost_getMyShortDescription_200_response.h
  OAIPost_getStarTransactions_200_response.h
  OAIPost_getStarTransactions_request.h
  OAIPost_getStickerSet_200_response.h
  OAIPost_getStickerSet_request.h
  OAIPost_getUpdates_200_response.h
  OAIPost_getUpdates_request.h
  OAIPost_getUserChatBoosts_200_response.h
  OAIPost_getUserChatBoosts_request.h
  OAIPost_getUserChatBoosts_request_chat_id.h
  OAIPost_getUserProfilePhotos_200_response.h
  OAIPost_getUserProfilePhotos_request.h
  OAIPost_getWebhookInfo_200_response.h
  OAIPost_giftPremiumSubscription_request.h
  OAIPost_leaveChat_request.h
  OAIPost_leaveChat_request_chat_id.h
  OAIPost_pinChatMessage_request.h
  OAIPost_postStory_200_response.h
  OAIPost_promoteChatMember_request.h
  OAIPost_readBusinessMessage_request.h
  OAIPost_refundStarPayment_request.h
  OAIPost_removeBusinessAccountProfilePhoto_request.h
  OAIPost_removeUserVerification_request.h
  OAIPost_restrictChatMember_request.h
  OAIPost_restrictChatMember_request_chat_id.h
  OAIPost_revokeChatInviteLink_request.h
  OAIPost_revokeChatInviteLink_request_chat_id.h
  OAIPost_savePreparedInlineMessage_200_response.h
  OAIPost_savePreparedInlineMessage_request.h
  OAIPost_sendAnimation_request_animation.h
  OAIPost_sendAudio_request_audio.h
  OAIPost_sendAudio_request_thumbnail.h
  OAIPost_sendChatAction_request.h
  OAIPost_sendContact_request.h
  OAIPost_sendDice_request.h
  OAIPost_sendDocument_request_document.h
  OAIPost_sendGame_request.h
  OAIPost_sendGift_request.h
  OAIPost_sendGift_request_chat_id.h
  OAIPost_sendInvoice_request.h
  OAIPost_sendLocation_request.h
  OAIPost_sendMediaGroup_200_response.h
  OAIPost_sendMediaGroup_request_media_inner.h
  OAIPost_sendMessage_200_response.h
  OAIPost_sendMessage_request.h
  OAIPost_sendMessage_request_chat_id.h
  OAIPost_sendMessage_request_reply_markup.h
  OAIPost_sendPaidMedia_request_chat_id.h
  OAIPost_sendPhoto_request_photo.h
  OAIPost_sendPoll_request.h
  OAIPost_sendSticker_request_sticker.h
  OAIPost_sendVenue_request.h
  OAIPost_sendVideoNote_request_video_note.h
  OAIPost_sendVideo_request_cover.h
  OAIPost_sendVideo_request_video.h
  OAIPost_sendVoice_request_voice.h
  OAIPost_setBusinessAccountBio_request.h
  OAIPost_setBusinessAccountGiftSettings_request.h
  OAIPost_setBusinessAccountName_request.h
  OAIPost_setBusinessAccountUsername_request.h
  OAIPost_setChatAdministratorCustomTitle_request.h
  OAIPost_setChatDescription_request.h
  OAIPost_setChatMenuButton_request.h
  OAIPost_setChatPermissions_request.h
  OAIPost_setChatStickerSet_request.h
  OAIPost_setChatTitle_request.h
  OAIPost_setCustomEmojiStickerSetThumbnail_request.h
  OAIPost_setGameScore_request.h
  OAIPost_setMessageReaction_request.h
  OAIPost_setMyCommands_request.h
  OAIPost_setMyDefaultAdministratorRights_request.h
  OAIPost_setMyDescription_request.h
  OAIPost_setMyName_request.h
  OAIPost_setMyShortDescription_request.h
  OAIPost_setPassportDataErrors_request.h
  OAIPost_setStickerEmojiList_request.h
  OAIPost_setStickerKeywords_request.h
  OAIPost_setStickerMaskPosition_request.h
  OAIPost_setStickerPositionInSet_request.h
  OAIPost_setStickerSetThumbnail_request_thumbnail.h
  OAIPost_setStickerSetTitle_request.h
  OAIPost_setUserEmojiStatus_request.h
  OAIPost_setWebhook_200_response.h
  OAIPost_stopMessageLiveLocation_request.h
  OAIPost_stopPoll_200_response.h
  OAIPost_stopPoll_request.h
  OAIPost_transferBusinessAccountStars_request.h
  OAIPost_transferGift_request.h
  OAIPost_unbanChatMember_request.h
  OAIPost_unpinChatMessage_request.h
  OAIPost_upgradeGift_request.h
  OAIPost_verifyChat_request.h
  OAIPost_verifyUser_request.h
  OAIPreCheckoutQuery.h
  OAIPreparedInlineMessage.h
  OAIProximityAlertTriggered.h
  OAIReactionCount.h
  OAIReactionType.h
  OAIReactionTypeCustomEmoji.h
  OAIReactionTypeEmoji.h
  OAIReactionTypePaid.h
  OAIRefundedPayment.h
  OAIReplyKeyboardMarkup.h
  OAIReplyKeyboardRemove.h
  OAIReplyParameters.h
  OAIReplyParameters_chat_id.h
  OAIResponseParameters.h
  OAIRevenueWithdrawalState.h
  OAIRevenueWithdrawalStateFailed.h
  OAIRevenueWithdrawalStatePending.h
  OAIRevenueWithdrawalStateSucceeded.h
  OAISentWebAppMessage.h
  OAISharedUser.h
  OAIShippingAddress.h
  OAIShippingOption.h
  OAIShippingQuery.h
  OAIStarAmount.h
  OAIStarTransaction.h
  OAIStarTransactions.h
  OAISticker.h
  OAIStickerSet.h
  OAIStory.h
  OAIStoryArea.h
  OAIStoryAreaPosition.h
  OAIStoryAreaType.h
  OAIStoryAreaTypeLink.h
  OAIStoryAreaTypeLocation.h
  OAIStoryAreaTypeSuggestedReaction.h
  OAIStoryAreaTypeUniqueGift.h
  OAIStoryAreaTypeWeather.h
  OAISuccessfulPayment.h
  OAISwitchInlineQueryChosenChat.h
  OAITextQuote.h
  OAITransactionPartner.h
  OAITransactionPartnerAffiliateProgram.h
  OAITransactionPartnerChat.h
  OAITransactionPartnerFragment.h
  OAITransactionPartnerOther.h
  OAITransactionPartnerTelegramAds.h
  OAITransactionPartnerTelegramApi.h
  OAITransactionPartnerUser.h
  OAIUniqueGift.h
  OAIUniqueGiftBackdrop.h
  OAIUniqueGiftBackdropColors.h
  OAIUniqueGiftInfo.h
  OAIUniqueGiftModel.h
  OAIUniqueGiftSymbol.h
  OAIUpdate.h
  OAIUser.h
  OAIUserChatBoosts.h
  OAIUserProfilePhotos.h
  OAIUsersShared.h
  OAIVenue.h
  OAIVideo.h
  OAIVideoChatEnded.h
  OAIVideoChatParticipantsInvited.h
  OAIVideoChatScheduled.h
  OAIVideoNote.h
  OAIVoice.h
  OAIWebAppData.h
  OAIWebAppInfo.h
  OAIWebhookInfo.h
  OAIWriteAccessAllowed.h
  OAIDefaultApi.h
  OAIHelpers.h
  OAIHttpRequest.h
  OAIObject.h
  OAIEnum.h
  OAIHttpFileElement.h
  OAIServerConfiguration.h
  OAIServerVariable.h
  OAIOauth.h
  OAIAcceptedGiftTypes.cpp
  OAIAffiliateInfo.cpp
  OAIAnimation.cpp
  OAIAudio.cpp
  OAIBackgroundFill.cpp
  OAIBackgroundFillFreeformGradient.cpp
  OAIBackgroundFillGradient.cpp
  OAIBackgroundFillSolid.cpp
  OAIBackgroundType.cpp
  OAIBackgroundTypeChatTheme.cpp
  OAIBackgroundTypeFill.cpp
  OAIBackgroundTypePattern.cpp
  OAIBackgroundTypeWallpaper.cpp
  OAIBirthdate.cpp
  OAIBotCommand.cpp
  OAIBotCommandScope.cpp
  OAIBotCommandScopeAllChatAdministrators.cpp
  OAIBotCommandScopeAllGroupChats.cpp
  OAIBotCommandScopeAllPrivateChats.cpp
  OAIBotCommandScopeChat.cpp
  OAIBotCommandScopeChatAdministrators.cpp
  OAIBotCommandScopeChatMember.cpp
  OAIBotCommandScopeDefault.cpp
  OAIBotDescription.cpp
  OAIBotName.cpp
  OAIBotShortDescription.cpp
  OAIBusinessBotRights.cpp
  OAIBusinessConnection.cpp
  OAIBusinessIntro.cpp
  OAIBusinessLocation.cpp
  OAIBusinessMessagesDeleted.cpp
  OAIBusinessOpeningHours.cpp
  OAIBusinessOpeningHoursInterval.cpp
  OAICallbackQuery.cpp
  OAIChat.cpp
  OAIChatAdministratorRights.cpp
  OAIChatBackground.cpp
  OAIChatBoost.cpp
  OAIChatBoostAdded.cpp
  OAIChatBoostRemoved.cpp
  OAIChatBoostSource.cpp
  OAIChatBoostSourceGiftCode.cpp
  OAIChatBoostSourceGiveaway.cpp
  OAIChatBoostSourcePremium.cpp
  OAIChatBoostUpdated.cpp
  OAIChatFullInfo.cpp
  OAIChatInviteLink.cpp
  OAIChatJoinRequest.cpp
  OAIChatLocation.cpp
  OAIChatMember.cpp
  OAIChatMemberAdministrator.cpp
  OAIChatMemberBanned.cpp
  OAIChatMemberLeft.cpp
  OAIChatMemberMember.cpp
  OAIChatMemberOwner.cpp
  OAIChatMemberRestricted.cpp
  OAIChatMemberUpdated.cpp
  OAIChatPermissions.cpp
  OAIChatPhoto.cpp
  OAIChatShared.cpp
  OAIChosenInlineResult.cpp
  OAIContact.cpp
  OAICopyTextButton.cpp
  OAIDice.cpp
  OAIDocument.cpp
  OAIEncryptedCredentials.cpp
  OAIEncryptedPassportElement.cpp
  OAIError.cpp
  OAIExternalReplyInfo.cpp
  OAIFile.cpp
  OAIForceReply.cpp
  OAIForumTopic.cpp
  OAIForumTopicCreated.cpp
  OAIForumTopicEdited.cpp
  OAIGame.cpp
  OAIGameHighScore.cpp
  OAIGift.cpp
  OAIGiftInfo.cpp
  OAIGifts.cpp
  OAIGiveaway.cpp
  OAIGiveawayCompleted.cpp
  OAIGiveawayCreated.cpp
  OAIGiveawayWinners.cpp
  OAIInaccessibleMessage.cpp
  OAIInlineKeyboardButton.cpp
  OAIInlineKeyboardMarkup.cpp
  OAIInlineQuery.cpp
  OAIInlineQueryResult.cpp
  OAIInlineQueryResultArticle.cpp
  OAIInlineQueryResultAudio.cpp
  OAIInlineQueryResultCachedAudio.cpp
  OAIInlineQueryResultCachedDocument.cpp
  OAIInlineQueryResultCachedGif.cpp
  OAIInlineQueryResultCachedMpeg4Gif.cpp
  OAIInlineQueryResultCachedPhoto.cpp
  OAIInlineQueryResultCachedSticker.cpp
  OAIInlineQueryResultCachedVideo.cpp
  OAIInlineQueryResultCachedVoice.cpp
  OAIInlineQueryResultContact.cpp
  OAIInlineQueryResultDocument.cpp
  OAIInlineQueryResultGame.cpp
  OAIInlineQueryResultGif.cpp
  OAIInlineQueryResultLocation.cpp
  OAIInlineQueryResultMpeg4Gif.cpp
  OAIInlineQueryResultPhoto.cpp
  OAIInlineQueryResultVenue.cpp
  OAIInlineQueryResultVideo.cpp
  OAIInlineQueryResultVoice.cpp
  OAIInlineQueryResultsButton.cpp
  OAIInputContactMessageContent.cpp
  OAIInputInvoiceMessageContent.cpp
  OAIInputLocationMessageContent.cpp
  OAIInputMedia.cpp
  OAIInputMediaAnimation.cpp
  OAIInputMediaAudio.cpp
  OAIInputMediaDocument.cpp
  OAIInputMediaPhoto.cpp
  OAIInputMediaVideo.cpp
  OAIInputMessageContent.cpp
  OAIInputPaidMedia.cpp
  OAIInputPaidMediaPhoto.cpp
  OAIInputPaidMediaVideo.cpp
  OAIInputPollOption.cpp
  OAIInputProfilePhoto.cpp
  OAIInputProfilePhotoAnimated.cpp
  OAIInputProfilePhotoStatic.cpp
  OAIInputSticker.cpp
  OAIInputStoryContent.cpp
  OAIInputStoryContentPhoto.cpp
  OAIInputStoryContentVideo.cpp
  OAIInputTextMessageContent.cpp
  OAIInputVenueMessageContent.cpp
  OAIInvoice.cpp
  OAIKeyboardButton.cpp
  OAIKeyboardButtonPollType.cpp
  OAIKeyboardButtonRequestChat.cpp
  OAIKeyboardButtonRequestUsers.cpp
  OAILabeledPrice.cpp
  OAILinkPreviewOptions.cpp
  OAILocation.cpp
  OAILocationAddress.cpp
  OAILoginUrl.cpp
  OAIMaskPosition.cpp
  OAIMaybeInaccessibleMessage.cpp
  OAIMenuButton.cpp
  OAIMenuButtonCommands.cpp
  OAIMenuButtonDefault.cpp
  OAIMenuButtonWebApp.cpp
  OAIMessage.cpp
  OAIMessageAutoDeleteTimerChanged.cpp
  OAIMessageEntity.cpp
  OAIMessageId.cpp
  OAIMessageOrigin.cpp
  OAIMessageOriginChannel.cpp
  OAIMessageOriginChat.cpp
  OAIMessageOriginHiddenUser.cpp
  OAIMessageOriginUser.cpp
  OAIMessageReactionCountUpdated.cpp
  OAIMessageReactionUpdated.cpp
  OAIOrderInfo.cpp
  OAIOwnedGift.cpp
  OAIOwnedGiftRegular.cpp
  OAIOwnedGiftUnique.cpp
  OAIOwnedGifts.cpp
  OAIPaidMedia.cpp
  OAIPaidMediaInfo.cpp
  OAIPaidMediaPhoto.cpp
  OAIPaidMediaPreview.cpp
  OAIPaidMediaPurchased.cpp
  OAIPaidMediaVideo.cpp
  OAIPaidMessagePriceChanged.cpp
  OAIPassportData.cpp
  OAIPassportElementError.cpp
  OAIPassportElementErrorDataField.cpp
  OAIPassportElementErrorFile.cpp
  OAIPassportElementErrorFiles.cpp
  OAIPassportElementErrorFrontSide.cpp
  OAIPassportElementErrorReverseSide.cpp
  OAIPassportElementErrorSelfie.cpp
  OAIPassportElementErrorTranslationFile.cpp
  OAIPassportElementErrorTranslationFiles.cpp
  OAIPassportElementErrorUnspecified.cpp
  OAIPassportFile.cpp
  OAIPhotoSize.cpp
  OAIPoll.cpp
  OAIPollAnswer.cpp
  OAIPollOption.cpp
  OAIPost_answerCallbackQuery_request.cpp
  OAIPost_answerInlineQuery_request.cpp
  OAIPost_answerPreCheckoutQuery_request.cpp
  OAIPost_answerShippingQuery_request.cpp
  OAIPost_answerWebAppQuery_200_response.cpp
  OAIPost_answerWebAppQuery_request.cpp
  OAIPost_approveChatJoinRequest_request.cpp
  OAIPost_banChatMember_request.cpp
  OAIPost_banChatMember_request_chat_id.cpp
  OAIPost_banChatSenderChat_request.cpp
  OAIPost_closeForumTopic_request.cpp
  OAIPost_convertGiftToStars_request.cpp
  OAIPost_copyMessage_200_response.cpp
  OAIPost_copyMessage_request.cpp
  OAIPost_copyMessages_request.cpp
  OAIPost_createChatInviteLink_200_response.cpp
  OAIPost_createChatInviteLink_request.cpp
  OAIPost_createChatSubscriptionInviteLink_request.cpp
  OAIPost_createChatSubscriptionInviteLink_request_chat_id.cpp
  OAIPost_createForumTopic_200_response.cpp
  OAIPost_createForumTopic_request.cpp
  OAIPost_createInvoiceLink_request.cpp
  OAIPost_deleteBusinessMessages_request.cpp
  OAIPost_deleteChatStickerSet_request.cpp
  OAIPost_deleteMessage_request.cpp
  OAIPost_deleteMessages_request.cpp
  OAIPost_deleteMyCommands_request.cpp
  OAIPost_deleteStickerFromSet_request.cpp
  OAIPost_deleteStickerSet_request.cpp
  OAIPost_deleteStory_request.cpp
  OAIPost_deleteWebhook_request.cpp
  OAIPost_editChatInviteLink_request.cpp
  OAIPost_editChatSubscriptionInviteLink_request.cpp
  OAIPost_editForumTopic_request.cpp
  OAIPost_editGeneralForumTopic_request.cpp
  OAIPost_editMessageCaption_request.cpp
  OAIPost_editMessageLiveLocation_request.cpp
  OAIPost_editMessageReplyMarkup_request.cpp
  OAIPost_editMessageText_200_response.cpp
  OAIPost_editMessageText_200_response_result.cpp
  OAIPost_editMessageText_request.cpp
  OAIPost_editMessageText_request_chat_id.cpp
  OAIPost_editUserStarSubscription_request.cpp
  OAIPost_exportChatInviteLink_200_response.cpp
  OAIPost_exportChatInviteLink_request.cpp
  OAIPost_forwardMessage_request.cpp
  OAIPost_forwardMessage_request_from_chat_id.cpp
  OAIPost_forwardMessages_200_response.cpp
  OAIPost_forwardMessages_request.cpp
  OAIPost_forwardMessages_request_from_chat_id.cpp
  OAIPost_getAvailableGifts_200_response.cpp
  OAIPost_getBusinessAccountGifts_200_response.cpp
  OAIPost_getBusinessAccountGifts_request.cpp
  OAIPost_getBusinessAccountStarBalance_200_response.cpp
  OAIPost_getBusinessConnection_200_response.cpp
  OAIPost_getBusinessConnection_request.cpp
  OAIPost_getChatAdministrators_200_response.cpp
  OAIPost_getChatMemberCount_200_response.cpp
  OAIPost_getChatMember_200_response.cpp
  OAIPost_getChatMember_request.cpp
  OAIPost_getChatMenuButton_200_response.cpp
  OAIPost_getChatMenuButton_request.cpp
  OAIPost_getChat_200_response.cpp
  OAIPost_getCustomEmojiStickers_request.cpp
  OAIPost_getFile_200_response.cpp
  OAIPost_getFile_request.cpp
  OAIPost_getForumTopicIconStickers_200_response.cpp
  OAIPost_getGameHighScores_200_response.cpp
  OAIPost_getGameHighScores_request.cpp
  OAIPost_getMe_200_response.cpp
  OAIPost_getMyCommands_200_response.cpp
  OAIPost_getMyCommands_request.cpp
  OAIPost_getMyDefaultAdministratorRights_200_response.cpp
  OAIPost_getMyDefaultAdministratorRights_request.cpp
  OAIPost_getMyDescription_200_response.cpp
  OAIPost_getMyName_200_response.cpp
  OAIPost_getMyName_request.cpp
  OAIPost_getMyShortDescription_200_response.cpp
  OAIPost_getStarTransactions_200_response.cpp
  OAIPost_getStarTransactions_request.cpp
  OAIPost_getStickerSet_200_response.cpp
  OAIPost_getStickerSet_request.cpp
  OAIPost_getUpdates_200_response.cpp
  OAIPost_getUpdates_request.cpp
  OAIPost_getUserChatBoosts_200_response.cpp
  OAIPost_getUserChatBoosts_request.cpp
  OAIPost_getUserChatBoosts_request_chat_id.cpp
  OAIPost_getUserProfilePhotos_200_response.cpp
  OAIPost_getUserProfilePhotos_request.cpp
  OAIPost_getWebhookInfo_200_response.cpp
  OAIPost_giftPremiumSubscription_request.cpp
  OAIPost_leaveChat_request.cpp
  OAIPost_leaveChat_request_chat_id.cpp
  OAIPost_pinChatMessage_request.cpp
  OAIPost_postStory_200_response.cpp
  OAIPost_promoteChatMember_request.cpp
  OAIPost_readBusinessMessage_request.cpp
  OAIPost_refundStarPayment_request.cpp
  OAIPost_removeBusinessAccountProfilePhoto_request.cpp
  OAIPost_removeUserVerification_request.cpp
  OAIPost_restrictChatMember_request.cpp
  OAIPost_restrictChatMember_request_chat_id.cpp
  OAIPost_revokeChatInviteLink_request.cpp
  OAIPost_revokeChatInviteLink_request_chat_id.cpp
  OAIPost_savePreparedInlineMessage_200_response.cpp
  OAIPost_savePreparedInlineMessage_request.cpp
  OAIPost_sendAnimation_request_animation.cpp
  OAIPost_sendAudio_request_audio.cpp
  OAIPost_sendAudio_request_thumbnail.cpp
  OAIPost_sendChatAction_request.cpp
  OAIPost_sendContact_request.cpp
  OAIPost_sendDice_request.cpp
  OAIPost_sendDocument_request_document.cpp
  OAIPost_sendGame_request.cpp
  OAIPost_sendGift_request.cpp
  OAIPost_sendGift_request_chat_id.cpp
  OAIPost_sendInvoice_request.cpp
  OAIPost_sendLocation_request.cpp
  OAIPost_sendMediaGroup_200_response.cpp
  OAIPost_sendMediaGroup_request_media_inner.cpp
  OAIPost_sendMessage_200_response.cpp
  OAIPost_sendMessage_request.cpp
  OAIPost_sendMessage_request_chat_id.cpp
  OAIPost_sendMessage_request_reply_markup.cpp
  OAIPost_sendPaidMedia_request_chat_id.cpp
  OAIPost_sendPhoto_request_photo.cpp
  OAIPost_sendPoll_request.cpp
  OAIPost_sendSticker_request_sticker.cpp
  OAIPost_sendVenue_request.cpp
  OAIPost_sendVideoNote_request_video_note.cpp
  OAIPost_sendVideo_request_cover.cpp
  OAIPost_sendVideo_request_video.cpp
  OAIPost_sendVoice_request_voice.cpp
  OAIPost_setBusinessAccountBio_request.cpp
  OAIPost_setBusinessAccountGiftSettings_request.cpp
  OAIPost_setBusinessAccountName_request.cpp
  OAIPost_setBusinessAccountUsername_request.cpp
  OAIPost_setChatAdministratorCustomTitle_request.cpp
  OAIPost_setChatDescription_request.cpp
  OAIPost_setChatMenuButton_request.cpp
  OAIPost_setChatPermissions_request.cpp
  OAIPost_setChatStickerSet_request.cpp
  OAIPost_setChatTitle_request.cpp
  OAIPost_setCustomEmojiStickerSetThumbnail_request.cpp
  OAIPost_setGameScore_request.cpp
  OAIPost_setMessageReaction_request.cpp
  OAIPost_setMyCommands_request.cpp
  OAIPost_setMyDefaultAdministratorRights_request.cpp
  OAIPost_setMyDescription_request.cpp
  OAIPost_setMyName_request.cpp
  OAIPost_setMyShortDescription_request.cpp
  OAIPost_setPassportDataErrors_request.cpp
  OAIPost_setStickerEmojiList_request.cpp
  OAIPost_setStickerKeywords_request.cpp
  OAIPost_setStickerMaskPosition_request.cpp
  OAIPost_setStickerPositionInSet_request.cpp
  OAIPost_setStickerSetThumbnail_request_thumbnail.cpp
  OAIPost_setStickerSetTitle_request.cpp
  OAIPost_setUserEmojiStatus_request.cpp
  OAIPost_setWebhook_200_response.cpp
  OAIPost_stopMessageLiveLocation_request.cpp
  OAIPost_stopPoll_200_response.cpp
  OAIPost_stopPoll_request.cpp
  OAIPost_transferBusinessAccountStars_request.cpp
  OAIPost_transferGift_request.cpp
  OAIPost_unbanChatMember_request.cpp
  OAIPost_unpinChatMessage_request.cpp
  OAIPost_upgradeGift_request.cpp
  OAIPost_verifyChat_request.cpp
  OAIPost_verifyUser_request.cpp
  OAIPreCheckoutQuery.cpp
  OAIPreparedInlineMessage.cpp
  OAIProximityAlertTriggered.cpp
  OAIReactionCount.cpp
  OAIReactionType.cpp
  OAIReactionTypeCustomEmoji.cpp
  OAIReactionTypeEmoji.cpp
  OAIReactionTypePaid.cpp
  OAIRefundedPayment.cpp
  OAIReplyKeyboardMarkup.cpp
  OAIReplyKeyboardRemove.cpp
  OAIReplyParameters.cpp
  OAIReplyParameters_chat_id.cpp
  OAIResponseParameters.cpp
  OAIRevenueWithdrawalState.cpp
  OAIRevenueWithdrawalStateFailed.cpp
  OAIRevenueWithdrawalStatePending.cpp
  OAIRevenueWithdrawalStateSucceeded.cpp
  OAISentWebAppMessage.cpp
  OAISharedUser.cpp
  OAIShippingAddress.cpp
  OAIShippingOption.cpp
  OAIShippingQuery.cpp
  OAIStarAmount.cpp
  OAIStarTransaction.cpp
  OAIStarTransactions.cpp
  OAISticker.cpp
  OAIStickerSet.cpp
  OAIStory.cpp
  OAIStoryArea.cpp
  OAIStoryAreaPosition.cpp
  OAIStoryAreaType.cpp
  OAIStoryAreaTypeLink.cpp
  OAIStoryAreaTypeLocation.cpp
  OAIStoryAreaTypeSuggestedReaction.cpp
  OAIStoryAreaTypeUniqueGift.cpp
  OAIStoryAreaTypeWeather.cpp
  OAISuccessfulPayment.cpp
  OAISwitchInlineQueryChosenChat.cpp
  OAITextQuote.cpp
  OAITransactionPartner.cpp
  OAITransactionPartnerAffiliateProgram.cpp
  OAITransactionPartnerChat.cpp
  OAITransactionPartnerFragment.cpp
  OAITransactionPartnerOther.cpp
  OAITransactionPartnerTelegramAds.cpp
  OAITransactionPartnerTelegramApi.cpp
  OAITransactionPartnerUser.cpp
  OAIUniqueGift.cpp
  OAIUniqueGiftBackdrop.cpp
  OAIUniqueGiftBackdropColors.cpp
  OAIUniqueGiftInfo.cpp
  OAIUniqueGiftModel.cpp
  OAIUniqueGiftSymbol.cpp
  OAIUpdate.cpp
  OAIUser.cpp
  OAIUserChatBoosts.cpp
  OAIUserProfilePhotos.cpp
  OAIUsersShared.cpp
  OAIVenue.cpp
  OAIVideo.cpp
  OAIVideoChatEnded.cpp
  OAIVideoChatParticipantsInvited.cpp
  OAIVideoChatScheduled.cpp
  OAIVideoNote.cpp
  OAIVoice.cpp
  OAIWebAppData.cpp
  OAIWebAppInfo.cpp
  OAIWebhookInfo.cpp
  OAIWriteAccessAllowed.cpp
  OAIDefaultApi.cpp
  OAIHelpers.cpp
  OAIHttpRequest.cpp
  OAIHttpFileElement.cpp
  OAIOauth.cpp
  )

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Network
        Qt${QT_VERSION_MAJOR}::Gui

)

configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
)

install(
    FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)

install(
    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)

install(
    EXPORT ${PROJECT_NAME}Targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)
